--- a/javasriptNotes/声明a为1b为2不借助其他变量改变ab的值.html
+++ b/javasriptNotes/声明a为1b为2不借助其他变量改变ab的值.html
@@ -6,9 +6,12 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			console.log(b);
-			var b = function(){	
-			}
+			var a = 1;
+			var b = 2;
+			a = a + b;
+			b = a - b;
+			a = a - b;
+			console.log(a, b)
 		</script>
 	</body>
 </html>
