--- a/javasriptNotes/封装函数insertafter,功能类似insertbefore.html
+++ b/javasriptNotes/封装函数insertafter,功能类似insertbefore.html
@@ -5,13 +5,10 @@
 		<title></title>
 	</head>
 	<body>
-		<script type = "text/javascript">
-
-		
-		
-		
-		
-
+		<script type="text/javascript">
+			Element.prototype.insertAfter(targetNode,afterNode){
+				
+			}
 		</script>
 	</body>
 </html>
