--- a/javasriptNotes/字符串.html
+++ b/javasriptNotes/字符串.html
@@ -7,12 +7,12 @@
 	<body>
 	</body>
 	<script type="text/javascript">
-		document.body.innerHTML= `<div>232314</div>	
+		document.body.innerHTML= <div>232314</div>	
 		
 		<div>232314</div>	
 		<div>232314</div>	
 		<div>232314</div>	
 		
-		`
+		
 	</script>
 </html>
